--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -152,6 +152,10 @@ input::-webkit-input-placeholder,textarea::-webkit-input-placeholder {
   color: #ccc;
 }
 
+input:-webkit-autofill { // 去掉选择背景
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 a {
   blr: expression(this.onFocus=this.blur())
 }
